reafctor: refatora pontos do código: duplicidade de lógica movidos para ms-common, simplicficação de regras de nÃegócio no ms-user, implementaÃação de transações externas no ms-transaction e demonstração da conversão de moedas no payload.